[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Images/Arrow.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="TextureButton" type="TextureButton"]
margin_top = 34.0
margin_right = 800.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 1
script = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 300, 10 )
scale = Vector2( 0.0537749, 0.0536822 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Text Button [/center]"
text = " Text Button "

[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
